--- a/semantic-2.html
+++ b/semantic-2.html
@@ -9,12 +9,12 @@
 
 <header>
     <h1>The Story of the Chinese Farmer</h1>
-    <p>11 may 2016, Alexandre Gorius</p>
+    <p class="p1">11 may 2016, Alexandre Gorius</p>
 </header>
 <main>
-    <img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg" alt="">
+    <img src="horse1.jpeg" alt="" height="528" width="382">
 
-    <p>Preamble</p>
+    <p class="p2">Preamble</p>
 
     <ul>
         <li>read this once</li>
@@ -24,25 +24,27 @@
 
     <h2>The story</h2>
 
-    <p>
-    Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to
-    commiserate. They said, “We are so sorry to hear your horse has run away. This is most unfortunate.” The farmer said,
-    "<em>Maybe</em>.” The next day the horse came back bringing seven wild horses with it, and in the evening
-    everybody came back and said, “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!” The
-    farmer again said, "<em>Maybe</em>.”
+    <p class="p3">
+        Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbours came around
+        to commiserate. They said,<br><q class="farmers">We are so sorry to hear your horse has run away. This is most unfortunate.</q>
+        The farmer said, <em>"Maybe."</em> The next day the horse came back bringing seven wild horses with it, and in
+        the evening everybody came back and said, <q class="farmers">Oh, isn’t that lucky. What a great turn of events. You now have
+        eight horses!</q> The farmer again said, <em>"Maybe."</em>
     </p>
-    <p>
-    The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg.
-    The neighbors then said, “Oh dear, that’s too bad,” and the farmer responded, “<em>Maybe</em>.” The next day the
-    conscription officers came around to conscript people into the army, and they rejected his son because he had a
-    broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, "<em>Maybe</em>.”
+    <p class ="p4">
+        The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg.
+        The neighbors then said, <q class="farmers">Oh dear, that’s too bad,</q> and the farmer responded, <em>"Maybe."</em> The next
+        day the conscription officers came around to conscript people into the army, and they rejected his son because
+        he had a broken leg. Again all the neighbors came around and said, <q class="farmers">Isn’t that great!</q> Again, he said,
+        <em>"Maybe."</em>
     </p>
 
     <blockquote>
-    The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell
-    whether anything that happens in it is good or bad - because you never know what will be the consequence of the
-    misfortune; or, you never know what will be the consequences of good fortune.
+        The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell
+        whether anything that happens in it is good or bad - because you never know what will be the consequence of the
+        misfortune; or, you never know what will be the consequences of good fortune.
     </blockquote>
+
     <p id="alan">Alan Watts <a href="https://nl.wikipedia.org/wiki/Alan_Watts" title="More info about Alan Watts">
         (wikipedia: Alan Watts)</a></p>
 
@@ -57,23 +59,23 @@
         </tr>
          <tr>
             <td>Lose a horse</td>
-            <td>Maybe</td>
+            <td class="maybe">Maybe</td>
         </tr>
         <tr>
             <td>Win more horses</td>
-            <td>Maybe</td>
+            <td class="maybe">Maybe</td>
         </tr>
         <tr>
             <td>Son injury</td>
-            <td>Maybe</td>
+            <td class="maybe">Maybe</td>
         </tr>
         <tr>
             <td>Avoid war</td>
-            <td>Maybe</td>
+            <td class="maybe">Maybe</td>
          </tr>
     </table>
 
-    <p>
+    <p class="ptable">
     Table representing the farmer's philosophy.
     </p>
 
@@ -81,10 +83,10 @@
     Conclusion
     </h2>
 
-    <p>
+    <p class="pgoodbad">
         <strong class="good">Good</strong> and <strong class="bad">Bad</strong> are just one perspective.
     </p>
-    <q>
+    <q class="apes">
         Bananas are good for monkeys, but monkeys are not good for bananas. <br>
         Let's not make a big deal out of it...
     </q>
@@ -93,7 +95,7 @@
 </main>
 
 <footer>
-    <p>
+    <p class="copy">
         Copyright Just Another Company 2017. All right reserved.
     </p>
     <p>Adapted from this article:
