--- a/index-semantic.html
+++ b/index-semantic.html
@@ -6,7 +6,7 @@
 
 <head>
     <title>The Story of the Chinese Farmer</title>
-    <link href="semantic-2.css" rel="stylesheet" type="text/css">
+    <link href="semantic.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
