--- a/index-semantic.html
+++ b/index-semantic.html
@@ -16,7 +16,7 @@
     <p class="p1">11 may 2016, Alexandre Gorius</p>
 </header>
 <main>
-    <img src="horse1.jpeg" alt="" height="528" width="382">
+    <img src="img/horse1.jpeg" alt="" height="528" width="382">
 
     <p class="p2">Preamble</p>
 
@@ -52,7 +52,7 @@
     <p id="alan">Alan Watts <a href="https://nl.wikipedia.org/wiki/Alan_Watts" title="More info about Alan Watts">
         (wikipedia: Alan Watts)</a></p>
 
-    <h2>
+    <h2 class="subtitles">
     Here is this dialog in the form of a table
     </h2>
 
@@ -83,7 +83,7 @@
     Table representing the farmer's philosophy.
     </p>
 
-    <h2>
+    <h2 class="subtitles">
     Conclusion
     </h2>
 
