background and fixing 2nd image

--- a/index-semantic.html
+++ b/index-semantic.html
@@ -18,7 +18,7 @@
     <p class="p1">11 may 2016, Alexandre Gorius</p>
 </header>
 <main>
-    <img id="horse" src="img/horse1.jpeg" alt="drawing oa chinese farmer horse" height="528" width="382">
+    <img id="horse" src="img/horse1.jpeg" alt="drawing oa chinese farmer horse" height="530">
 
     <p class="p2">Preamble</p>
 
@@ -64,7 +64,7 @@
     The dialog in the form of a table
     </h2>
 
-    <img id="stones" src="img/Rock_balancing.jpg" alt="balancing rocks">
+    <img id="stones" src="img/Rock_balancing.jpg" alt="balancing rocks" height="530">
 
     <table>
         <tr>
